# cm-api-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: container.yml  rust.yml
backend/: Cargo.toml
backend/schema/: cmapi.sql
backend/src/: achievements.rs  admin.rs  appeal.rs  auth.rs  authentik.rs  byond.rs  connections.rs  discord.rs  logging.rs  main.rs  new_players.rs  openapi.rs  player.rs  steam.rs  stickyban.rs  ticket.rs  token.rs  twitch.rs  twofactor.rs  user_settings.rs  utils.rs  whitelist.rs
frontend/: .env.development.local.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: accountSettings.tsx  activeBans.tsx  authentikLookup.tsx  authentikPanel.tsx  authentikUserPage.tsx  banAppeal.tsx  banHistory.tsx  discordLookupPage.tsx  homePage.tsx  multikeyTrace.tsx  myPlayerInfo.tsx  navigation.tsx  roundData.tsx  stickybanModal.tsx  userLookup.tsx
frontend/src/helpers/: api.ts
frontend/src/hooks/: useDocumentTitle.ts
frontend/src/types/: authentik.ts  global.ts  loginTriplet.ts
src/: admin.rs  auth.rs  authentik.rs  byond.rs  connections.rs  logging.rs  main.rs  new_players.rs  player.rs  spa.rs  stickyban.rs  ticket.rs  twofactor.rs  whitelist.rs
