[package]
name = "cm-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
http2byond = "0.1.0"
reqwest = "0.12.8"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_mysql"] }
serde = "1.0.210"
serde_json = "1.0.132"
sqlx = { version = "0.7", features = ["mysql", "runtime-async-std", "chrono"] }

[dependencies.rocket]
version = "0.5.1"
features = ["json"]
