[package]
name = "cm-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
http2byond = "0.1.0"
reqwest = { version = "0.12.8", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_mysql"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.7", features = ["mysql", "runtime-async-std", "chrono", "bigdecimal"] }

# OIDC/OAuth2 authentication
openidconnect = "3.5"
jsonwebtoken = "9.3"
base64 = "0.22"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dependencies.rocket]
version = "0.5.1"
features = ["json", "secrets"]
